syntax = "proto3";

package feature.payment;

option go_package = "github.com/hotstar/hs-core-ui-models-go/feature/payment";
option java_multiple_files = true;
option java_package = "com.hotstar.ui.model.feature.payment";

message InitPaymentPayload {
    string paymentMode = 1;
    string pgName = 2;
    string paymentProcessor = 3;
    string paymentType = 4;
    string subscriptionPack = 5;
    
    repeated PgParams pgParams = 6;
    message PgParams {
        string key = 1;
        string value = 2;
    }
    
    string city = 7;
    string state = 8;
    string zip = 9;
    string returnUrl = 10;
    repeated string user_segments = 11;
    string promoCode = 12;
    repeated string abTags = 13;
    string deviceId = 14;
    string phoneNumber = 15;
    string userJourneyContext = 16;
    string fname = 17;
    string lname = 18;
    string bankCode = 19;
}
